--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/js": "^6.5.95",
     "core-js": "^3.6.5",
+    "simple-icons": "^6.13.0",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
