--- a/package.json
+++ b/package.json
@@ -1,50 +1,26 @@
 {
-  "name": "pspark",
-  "version": "0.1.1",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
   "dependencies": {
     "@mdi/js": "^6.5.95",
-    "core-js": "^3.6.5",
+    "eslint": "^8.27.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "sass": "^1.56.1",
     "simple-icons": "^6.13.0",
+    "vite-plugin-ejs": "^1.5.0",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
+    "@vitejs/plugin-vue": "^1.6.1",
     "sitemap-webpack-plugin": "^1.1.1",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.11",
+    "unplugin-vue-components": "^0.22.9",
+    "vite": "^2.5.4",
+    "vite-plugin-vue2": "1.9.0",
     "vuetify-loader": "^1.7.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
+  }
 }
