--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@mdi/js": "^6.5.95",
     "eslint": "^8.27.0",
     "eslint-plugin-vue": "^8.7.1",
-    "sass": "^1.56.1",
+    "sass": "1.32",
     "simple-icons": "^6.13.0",
     "vite-plugin-ejs": "^1.5.0",
     "vue": "^2.6.11",
